Add benchmarking with integration_test

--- a/benchmark/android/app/build.gradle
+++ b/benchmark/android/app/build.gradle
@@ -52,6 +52,11 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    externalNativeBuild {
+		cmake {
+			path "../../src/benchmark_functions/CMakeLists.txt"
+		}
+	}
 }
 
 flutter {
