--- a/jni/ffigen.yaml
+++ b/jni/ffigen.yaml
@@ -13,10 +13,12 @@ headers:
   entry-points:
     - 'src/dartjni.h' # Exports majority of JNI functions
     - 'src/third_party/global_jni_env.h' # Exports GlobalJniEnv type
+    - 'src/jni_constants.h'
   include-directives:
     - 'src/dartjni.h'
     - 'src/third_party/global_jni_env.h'
     - 'third_party/jni.h' # jni.h from Android NDK
+    - 'src/jni_constants.h'
 compiler-opts:
   - '-Ithird_party/'
 enums:
@@ -41,7 +43,8 @@ structs:
   rename:
     ## opaque struct definitions, base types of jfieldID and jmethodID
     '_jfieldID': 'jfieldID_'
-    '_jmethodID': 'jmethodID_'
+    '_jmethodID':
+      'jmethodID_'
       #'JNI(.*)': 'Jni$1'
 unions:
   rename:
@@ -126,4 +129,3 @@ preamble: |
 comments:
   style: any
   length: full
-
