--- a/jni/pubspec.yaml
+++ b/jni/pubspec.yaml
@@ -20,6 +20,7 @@ dev_dependencies:
   ffigen: 7.2.10
   flutter_lints: ^2.0.0
   test: ^1.21.1
+  logging: ^1.1.1
 
 # The following section is specific to Flutter packages.
 flutter:
