Rename jobjectRefType enum to JObjectRefType

--- a/jni/ffigen.yaml
+++ b/jni/ffigen.yaml
@@ -24,6 +24,7 @@ compiler-opts:
 enums:
   rename:
     'JniType': 'JniCallType'
+    'jobjectRefType': 'JObjectRefType'
 functions:
   exclude:
     # Exclude init functions supposed to be defined in loaded DLL, not JNI
