--- a/jni/ffigen.yaml
+++ b/jni/ffigen.yaml
@@ -32,6 +32,18 @@ functions:
     - 'GetJniContext'
     - 'setJniGetters'
     - 'jni_log'
+    # Inline functions
+    - '__load_class_into'
+    - 'load_class'
+    - 'load_class_gr'
+    - 'attach_thread'
+    - 'load_method'
+    - 'load_static_method'
+    - 'load_field'
+    - 'load_static_field'
+    - 'to_global_ref'
+    - 'check_exception'
+    - 'load_env'
     # This is a native function in Java. No need to call it from Dart.
     - 'Java_com_github_dart_1lang_jni_PortContinuation__1resumeWith'
 structs:
