--- a/jni/ffigen.yaml
+++ b/jni/ffigen.yaml
@@ -36,7 +36,7 @@ functions:
     - 'acquire_lock'
     - 'release_lock'
     - 'init_lock'
-    - 'destroy_ock'
+    - 'destroy_lock'
     - 'load_class'
     - 'load_class_global_ref'
     - 'attach_thread'
