--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -169,7 +169,7 @@ jobs:
       - name: Get dependencies
         run: dart pub get
       - name: Run tests
-        run: dart test
+        run: dart test --test-randomize-ordering-seed random
       - name: Install coverage
         run: dart pub global activate coverage
       - name: Collect coverage
@@ -209,7 +209,7 @@ jobs:
       - run: Add-Content $env:GITHUB_PATH "$env:JAVA_HOME\bin\server"
       - run: dart pub get
       - run: dart run jni:setup
-      - run: dart test
+      - run: dart test --test-randomize-ordering-seed random
 
   test_jnigen_windows_minimal:
     needs: [analyze_jnigen]
@@ -264,7 +264,7 @@ jobs:
           java-version: '11'
       - run: dart pub get
       - run: dart run jni:setup
-      - run: dart test
+      - run: dart test --test-randomize-ordering-seed random
 
   test_jnigen_macos_minimal:
     needs: [analyze_jnigen]
